Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,16 @@
   text-align: center;
 }
 
+.today-wrapper {
+  display: flex;
+  gap: 10px;
+  margin: 15px 0;
+}
+
+#city-name {
+  font-size: 3rem;
+}
+
 .info-wrapper,
 .high-low-wrapper {
   display: flex;
@@ -20,19 +30,6 @@
 .today-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
-
-.details {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 1fr;
-  gap: 10px;
-}
-
-.details-card {
-  border: 1px solid black;
-  border-radius: 15px;
 }
 
 #temp-number {
@@ -45,18 +42,40 @@
 }
 
 #gif-image {
+  height: 100%;
+  max-height: 400px;
   width: 100%;
   object-fit: cover;
+  overflow: hidden;
+}
+
+.details {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 1fr;
+  gap: 10px;
+}
+
+.details-card {
+  border: 1px solid black;
+  border-radius: 15px;
 }
 
 .hourly-forecast {
   display: flex;
   overflow: scroll;
-  width: 70%;
+  width: 80%;
   gap: 10px;
   margin: 10px;
 }
-
+.week-forecast {
+  width: 80%;
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  border: 1px solid red;
+}
 .week-forecast-icons {
   width: 30px;
   height: 30px;
@@ -69,36 +88,50 @@
 
 @media (min-width: 750px) {
   .main-wrapper {
-    justify-content: center;
-    /* align-items: center; */
     display: flex;
+    flex-direction: column;
     max-width: 100vw;
   }
 
-  .search-area {
-    margin-bottom: auto;
+  .details-wrapper,
+  .today-wrapper {
+    display: grid;
+    gap: 15px;
   }
 
   .today-wrapper {
-    max-height: 100%;
+    justify-content: center;
+    max-width: 90%;
+    flex: 1;
+    max-height: 70vh;
   }
 
   .city-wrapper {
-    margin-top: auto;
+    grid-area: 2/1/3/2;
+    align-self: end;
   }
+  .info-wrapper {
+    grid-area: 3/1/4/2;
+    align-self: start;
+  }
+
   #city-name {
     font-size: 5vw;
   }
-
   .gif-wrapper {
-    margin-top: auto;
+    grid-area: 2/2/4/4;
   }
 
   .hourly-forecast {
-    width: 70%;
+    grid-area: 1/3/2/4;
   }
 
   .details-wrapper {
-    max-width: 50%;
+    align-self: center;
+    max-width: 80%;
+    gap: 10px;
+  }
+  .details {
+    grid-area: 1/1/3/3;
   }
 }
